--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   portainer:
     image: portainer/portainer
@@ -6,5 +6,5 @@ services:
     ports:
       - 9000:9000
     volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
-     - ./data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./data:/data
