--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,7 @@ services:
       - 9000:9000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./data:/data
+      - portainer_data:/data
+
+volumes: 
+  portainer_data:
